# cpp-trabalho-06-projeto-snaze-duplas-thiago-davii

./: README.md  author.md
source/: CMakeLists.txt
source/include/: level.h  snake.h  snaze_manager.h
source/src/: level.cpp  main.cpp  snazeManager.cpp  snaze_manager.cpp
